2011-11-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNumber.m: Fix alignment error when encoding/decoding ...
	buffer must be aligned so that any datatype can go in it.
	* Source/cifframe.m: Fix buffer size for small scalar values on
	64bit sparc
	* Source/GSFileHandle.m: Modify read/write to cope with interrupts.

2011-11-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Partial restructuring suggested by Fred, plus
	some more minor optimisation of equality checks for literal strings.

2011-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Fix error (spotted by Fred) in check of UTF-8
	string length against fixed character size string length.

2011-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Implement more efficient equality tests for
	utf-8 literal strings and strings in internal representation.
	Implement rangeOfComposedCharacterSequenceAtIndex: for utf8 literal
	strings.

2011-10-29  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSeq.h: Replace unsigned with NSUInteger.

2011-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Fix bug when widening mutable string in
        replaceOccurrencesOfString:...range:
	* Source/GSString.m: more efficient check to see if a literal string
	can be converted to ascii or latin1.  Remove unnecessary constraint
	on when we need to widen strings.

2011-10-28  Fred Kiefer <FredKiefer@gmx.de>

	* Tests/base/NSMutableString/basic.m: Add test for
	replaceOccurrencesOfString:...range:

2011-10-27  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Do not redefine GNUSTEP_CONFIG_FILE in case it confuses
	gnustep-config.  Add check that gnustep-config returns something when
	asked for the objc libraries.
	* configure: Regenerate
	* base.make.in: Add flag to tell compiler to use UTF-8 for literal
	string constants.

2011-10-25  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: fix erroneous define of HAVE_GNUTLS to zero, and add