@@ -1,3 +1,8 @@
+2011-11-04  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSDate.m:  ([-timeIntervalSinceDate:]) return NaN if other
+	date is nil (OSX compatibility).
+
 2011-11-02  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSNumber.m: Fix alignment error when encoding/decoding ...
